--- a/src/main/resources/com/libvasf/views/login-view.fxml
+++ b/src/main/resources/com/libvasf/views/login-view.fxml
@@ -2,37 +2,55 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.libvasf.controllers.usuario.LoginController">
-
-    
-
-    <!-- Caixa de entrada (VBox para centralizar os inputs) -->
-    <VBox alignment="CENTER" layoutX="3.0" layoutY="2.0" prefHeight="170.0" prefWidth="298.0" spacing="10" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-         <TextField fx:id="usernameField" promptText="Username" />
-         <PasswordField fx:id="passwordField" promptText="Senha" />
-
-        <!-- Campo Username -->
-        <VBox alignment="CENTER" spacing="5" />
-         <Button fx:id="loginButton" prefHeight="25.0" prefWidth="74.0" text="Login" />
-
-        <!-- Campo Senha -->
-        <VBox alignment="CENTER" spacing="5" />
-
-        <!-- Botões de Login e Cadastro -->
-        <VBox alignment="CENTER" spacing="10">
-            <padding>
-                <Insets bottom="10" left="10" right="10" top="10" />
-            </padding>
-        </VBox>
-      <Button fx:id="registerButton" layoutX="48.0" layoutY="90.0" prefHeight="25.0" prefWidth="74.0" text="Cadastro" />
-      <padding>
-         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-      </padding>
-
-    </VBox>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1024.0" prefWidth="1440.0" styleClass="Background" stylesheets="@../../../Style/global.css" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.libvasf.controllers.usuario.viewControllers.LoginController">
+   <children>
+      <VBox alignment="CENTER" prefHeight="1024.0" prefWidth="1440.0" AnchorPane.leftAnchor="1.0" AnchorPane.rightAnchor="1.0">
+         <children>
+            <HBox alignment="CENTER" prefHeight="1024.0" prefWidth="1440.0">
+               <children>
+                  <VBox id="loginFormPanel" alignment="CENTER" maxHeight="724.0" maxWidth="531.0" prefHeight="724.0" prefWidth="531.0" spacing="54.0" style="-fx-background-color: FFFFFF; -fx-padding: 100;" styleClass="FormVBox">
+                     <children>
+                        <TextField fx:id="usernameField" prefHeight="54.0" prefWidth="310.0" styleClass="TextField">
+                           <opaqueInsets>
+                              <Insets />
+                           </opaqueInsets>
+                        </TextField>
+                        <PasswordField fx:id="passwordField" prefHeight="54.0" prefWidth="310.0" styleClass="TextField" />
+                        <Button fx:id="loginButton" mnemonicParsing="false" prefHeight="41.0" prefWidth="154.0" text="Login" />
+                        <Hyperlink fx:id="forgotPassword" alignment="CENTER" prefHeight="52.0" prefWidth="240.0" text="Esqueceu a senha?" textAlignment="CENTER">
+                           <VBox.margin>
+                              <Insets />
+                           </VBox.margin>
+                           <padding>
+                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                           </padding>
+                           <font>
+                              <Font name="Arial" size="16.0" />
+                           </font>
+                        </Hyperlink>
+                     </children>
+                     <opaqueInsets>
+                        <Insets left="100.0" top="100.0" />
+                     </opaqueInsets>
+                  </VBox>
+               </children>
+            </HBox>
+         </children>
+      </VBox>
+      <ImageView fitHeight="150.0" fitWidth="100.0" layoutX="35.0" layoutY="40.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../assets/Logo.png" />
+         </image>
+      </ImageView>
+   </children>
 </AnchorPane>
