--- a/src/main/resources/com/libvasf/views/return-book-view.fxml
+++ b/src/main/resources/com/libvasf/views/return-book-view.fxml
@@ -2,8 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
@@ -11,51 +10,41 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="1024.0" prefWidth="1440.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane xmlns:fx="http://javafx.com/fxml" xmlns="http://javafx.com/javafx/11.0.1" prefHeight="600.0" prefWidth="800.0">
     <children>
-        <VBox alignment="CENTER" spacing="40.0" style="-fx-background-color: #f4f0eb;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" AnchorPane.bottomAnchor="0.0">
+        <VBox alignment="CENTER" spacing="20.0" style="-fx-background-color: #f4f0eb;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" AnchorPane.bottomAnchor="0.0">
             <children>
-                <VBox alignment="TOP_LEFT" spacing="30.0" style="-fx-background-color: #ffffff; -fx-border-radius: 15; -fx-background-radius: 15; -fx-padding: 40;" maxWidth="700.0" prefWidth="700.0">
-                    <!-- Título da Tela -->
-                    <Text text="Sistema de Empréstimo de Livros" style="-fx-font-size: 24; -fx-font-weight: bold;" />
+                <VBox alignment="TOP_LEFT" spacing="20.0" style="-fx-background-color: #ffffff; -fx-border-radius: 10; -fx-background-radius: 10; -fx-padding: 20;" maxWidth="400.0">
+                    <children>
+                        <!-- Pesquisar aluno -->
+                        <VBox spacing="10.0">
+                            <Text text="Pesquisar aluno" style="-fx-font-size: 14; -fx-font-weight: bold;" />
+                            <HBox spacing="10.0">
+                                <TextField fx:id="cpfField" promptText="Nome" style="-fx-background-color: #e8dfd2; -fx-border-radius: 5; -fx-background-radius: 5; -fx-padding: 10;" />
+                                <Button text="🔍" style="-fx-background-color: #e8dfd2; -fx-background-radius: 5; -fx-padding: 10;" />
+                            </HBox>
+                        </VBox>
 
-                    <!-- Seção de Pesquisa de Livros -->
-                    <VBox spacing="20.0">
-                        <Text text="Pesquisar Livros" style="-fx-font-size: 18; -fx-font-weight: bold;" />
-                        <HBox spacing="10.0">
-                            <TextField fx:id="pesquisarLivroField" promptText="Título, Autor, Categoria" style="-fx-background-color: #e8dfd2; -fx-border-radius: 5; -fx-background-radius: 5; -fx-padding: 10;" HBox.hgrow="ALWAYS"/>
-                            <Button text="🔍" style="-fx-background-color: #e8dfd2; -fx-border-radius: 5; -fx-background-radius: 5; -fx-padding: 10;" />
+                        <!-- Livros emprestados -->
+                        <VBox spacing="10.0">
+                            <Text text="Livros emprestados" style="-fx-font-size: 14; -fx-font-weight: bold;" />
+                            <HBox spacing="10.0">
+                                <ListView fx:id="livrosListView" prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: #e8dfd2; -fx-border-radius: 5; -fx-padding: 5;" />
+                                <Button text="Selecionar Livro" style="-fx-background-color: #e8dfd2; -fx-border-radius: 5; -fx-padding: 10;" />
+                            </HBox>
+                        </VBox>
+
+                        <!-- Atraso -->
+                        <VBox spacing="10.0">
+                            <Text text="Atraso" style="-fx-font-size: 14; -fx-font-weight: bold;" />
+                            <TextField fx:id="atrasoField" promptText="Valor" style="-fx-background-color: #e8dfd2; -fx-border-radius: 5; -fx-background-radius: 5; -fx-padding: 10;" />
+                        </VBox>
+
+                        <!-- Botão Devolver -->
+                        <HBox alignment="CENTER_RIGHT">
+                            <Button fx:id="devolverButton" text="Devolver" style="-fx-background-color: #e8dfd2; -fx-border-radius: 5; -fx-padding: 10;" />
                         </HBox>
-                    </VBox>
-
-                    <!-- Seção de Pesquisa de Cliente -->
-                    <VBox spacing="20.0">
-                        <Text text="Pesquisar Cliente" style="-fx-font-size: 18; -fx-font-weight: bold;" />
-                        <HBox spacing="10.0">
-                            <TextField fx:id="pesquisarClienteField" promptText="CPF" style="-fx-background-color: #e8dfd2; -fx-border-radius: 5; -fx-background-radius: 5; -fx-padding: 10;" />
-                            <Button text="🔍" style="-fx-background-color: #e8dfd2; -fx-border-radius: 5; -fx-background-radius: 5; -fx-padding: 10;" />
-                        </HBox>
-                    </VBox>
-
-                    <!-- Seção de Período de Empréstimo -->
-                    <VBox spacing="20.0">
-                        <Text text="Período de Empréstimo" style="-fx-font-size: 18; -fx-font-weight: bold;" />
-                        <ComboBox fx:id="periodoComboBox" promptText="Selecione o período" style="-fx-background-color: #e8dfd2; -fx-border-radius: 5; -fx-padding: 10;" prefWidth="200.0">
-                            <!-- Itens do ComboBox podem ser adicionados dinamicamente via código -->
-                        </ComboBox>
-                    </VBox>
-
-                    <!-- Seção de Data de Entrega -->
-                    <VBox spacing="20.0">
-                        <Text text="Data de Entrega" style="-fx-font-size: 18; -fx-font-weight: bold;" />
-                        <TextField fx:id="dataEntregaField" promptText="DD/MM/AAAA" style="-fx-background-color: #e8dfd2; -fx-border-radius: 5; -fx-text-fill: red; -fx-padding: 10;" />
-                    </VBox>
-
-                    <!-- Botões de Ação -->
-                    <HBox alignment="CENTER_RIGHT" spacing="10.0">
-                        <Button fx:id="limparButton" text="Limpar" style="-fx-background-color: #d3d3d3; -fx-border-radius: 5; -fx-padding: 10; -fx-font-size: 14;" />
-                        <Button fx:id="salvarButton" text="Salvar" style="-fx-background-color: #4CAF50; -fx-text-fill: white; -fx-border-radius: 5; -fx-padding: 10; -fx-font-size: 14;" />
-                    </HBox>
+                    </children>
                 </VBox>
             </children>
         </VBox>
