--- a/src/main/resources/com/libvasf/views/return-book-view.fxml
+++ b/src/main/resources/com/libvasf/views/return-book-view.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml" xmlns="http://javafx.com/javafx/11.0.1" prefHeight="600.0" prefWidth="800.0">
+<AnchorPane xmlns:fx="http://javafx.com/fxml" fx:controller="com.libvasf.controllers.emprestimo.DevolucaoViewController" xmlns="http://javafx.com/javafx/11.0.1" prefHeight="600.0" prefWidth="800.0">
     <children>
         <VBox alignment="CENTER" spacing="20.0" style="-fx-background-color: #f4f0eb;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" AnchorPane.bottomAnchor="0.0">
             <children>
