--- a/src/main/resources/com/libvasf/views/return-book-view.fxml
+++ b/src/main/resources/com/libvasf/views/return-book-view.fxml
@@ -1,48 +1,46 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml" fx:controller="com.libvasf.controllers.emprestimo.DevolucaoViewController" xmlns="http://javafx.com/javafx/11.0.1" prefHeight="600.0" prefWidth="800.0">
+<AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.libvasf.controllers.emprestimo.DevolucaoViewController">
     <children>
-        <VBox alignment="CENTER" spacing="20.0" style="-fx-background-color: #f4f0eb;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" AnchorPane.bottomAnchor="0.0">
+        <VBox alignment="CENTER" spacing="20.0" style="-fx-background-color: #f4f0eb;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <children>
-                <VBox alignment="TOP_LEFT" spacing="20.0" style="-fx-background-color: #ffffff; -fx-border-radius: 10; -fx-background-radius: 10; -fx-padding: 20;" maxWidth="400.0">
+                <VBox alignment="TOP_LEFT" maxWidth="400.0" spacing="20.0" style="-fx-background-color: #ffffff; -fx-border-radius: 10; -fx-background-radius: 10; -fx-padding: 20;">
                     <children>
                         <!-- Pesquisar aluno -->
                         <VBox spacing="10.0">
-                            <Text text="Pesquisar aluno" style="-fx-font-size: 14; -fx-font-weight: bold;" />
-                            <HBox spacing="10.0">
-                                <TextField fx:id="cpfField" promptText="Nome" style="-fx-background-color: #e8dfd2; -fx-border-radius: 5; -fx-background-radius: 5; -fx-padding: 10;" />
-                                <Button text="🔍" style="-fx-background-color: #e8dfd2; -fx-background-radius: 5; -fx-padding: 10;" />
+                            <Text style="-fx-font-size: 14; -fx-font-weight: bold;" text="Pesquisar aluno" />
+                            <HBox maxHeight="-Infinity" spacing="10.0">
+                                <TextField fx:id="cpfField" maxHeight="1.7976931348623157E308" minWidth="310.0" prefHeight="37.0" prefWidth="317.0" promptText="CPF" style="-fx-background-color: #e8dfd2; -fx-border-radius: 5; -fx-background-radius: 5; -fx-padding: 10;" />
+                                <Button style="-fx-background-color: #e8dfd2; -fx-background-radius: 5; -fx-padding: 10;" text="🔍" />
                             </HBox>
                         </VBox>
 
                         <!-- Livros emprestados -->
                         <VBox spacing="10.0">
-                            <Text text="Livros emprestados" style="-fx-font-size: 14; -fx-font-weight: bold;" />
+                            <Text style="-fx-font-size: 14; -fx-font-weight: bold;" text="Livros emprestados" />
                             <HBox spacing="10.0">
-                                <ListView fx:id="livrosListView" prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: #e8dfd2; -fx-border-radius: 5; -fx-padding: 5;" />
-                                <Button text="Selecionar Livro" style="-fx-background-color: #e8dfd2; -fx-border-radius: 5; -fx-padding: 10;" />
+                                <ListView fx:id="livrosListView" prefHeight="100.0" prefWidth="366.0" style="-fx-background-color: #e8dfd2; -fx-border-radius: 5; -fx-padding: 5;" />
                             </HBox>
                         </VBox>
 
                         <!-- Atraso -->
                         <VBox spacing="10.0">
-                            <Text text="Atraso" style="-fx-font-size: 14; -fx-font-weight: bold;" />
+                            <Text style="-fx-font-size: 14; -fx-font-weight: bold;" text="Atraso" />
                             <TextField fx:id="atrasoField" promptText="Valor" style="-fx-background-color: #e8dfd2; -fx-border-radius: 5; -fx-background-radius: 5; -fx-padding: 10;" />
                         </VBox>
 
                         <!-- Botão Devolver -->
-                        <HBox alignment="CENTER_RIGHT">
-                            <Button fx:id="devolverButton" text="Devolver" style="-fx-background-color: #e8dfd2; -fx-border-radius: 5; -fx-padding: 10;" />
+                        <HBox alignment="CENTER" spacing="200.0">
+                            <Button fx:id="sair" maxWidth="90.0" minWidth="67.0" prefHeight="37.0" prefWidth="90.0" style="-fx-background-color: #e8dfd2; -fx-border-radius: 5; -fx-padding: 10;" text="Voltar" />
+                     <Button fx:id="devolverButton" layoutX="303.0" layoutY="10.0" minWidth="90.0" prefHeight="37.0" prefWidth="90.0" style="-fx-background-color: #e8dfd2; -fx-border-radius: 5; -fx-padding: 10;" text="Devolver" />
                         </HBox>
                     </children>
                 </VBox>
