--- a/src/main/resources/com/libvasf/views/return-book-view.fxml
+++ b/src/main/resources/com/libvasf/views/return-book-view.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.URL?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
@@ -12,14 +13,14 @@
     <children>
         <VBox alignment="CENTER" spacing="20.0" style="-fx-background-color: #f4f0eb;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <children>
-                <VBox alignment="TOP_LEFT" maxWidth="400.0" spacing="20.0" style="-fx-background-color: #ffffff; -fx-border-radius: 10; -fx-background-radius: 10; -fx-padding: 20;">
+                <VBox alignment="TOP_LEFT" maxWidth="400.0" prefWidth="400.0" spacing="20.0" style="-fx-background-color: #ffffff; -fx-border-radius: 10; -fx-background-radius: 10; -fx-padding: 20;">
                     <children>
                         <!-- Pesquisar aluno -->
                         <VBox spacing="10.0">
                             <Text style="-fx-font-size: 14; -fx-font-weight: bold;" text="Pesquisar aluno" />
                             <HBox maxHeight="-Infinity" spacing="10.0">
                                 <TextField fx:id="cpfField" maxHeight="1.7976931348623157E308" minWidth="310.0" prefHeight="37.0" prefWidth="317.0" promptText="CPF" style="-fx-background-color: #e8dfd2; -fx-border-radius: 5; -fx-background-radius: 5; -fx-padding: 10;" />
-                                <Button style="-fx-background-color: #e8dfd2; -fx-background-radius: 5; -fx-padding: 10;" text="🔍" />
+                                <Button fx:id="buscarCliente" style="-fx-background-color: #e8dfd2; -fx-background-radius: 5; -fx-padding: 10;" text="🔍" />
                             </HBox>
                         </VBox>
 
@@ -30,21 +31,42 @@
                                 <ListView fx:id="livrosListView" prefHeight="100.0" prefWidth="366.0" style="-fx-background-color: #e8dfd2; -fx-border-radius: 5; -fx-padding: 5;" />
                             </HBox>
                         </VBox>
-
-                        <!-- Atraso -->
+                  <HBox prefHeight="100.0" prefWidth="200.0" spacing="50.0">
+                     <children>
+      
+                              <!-- Atraso -->
+                              <VBox spacing="10.0">
+                                  <Text style="-fx-font-size: 14; -fx-font-weight: bold;" text="Inicio" wrappingWidth="131.8310546875" />
+                           <HBox prefHeight="10.0" prefWidth="360.0">
+                              <children>
+                                        <TextField fx:id="inicio" cache="true" prefHeight="37.0" prefWidth="152.0" promptText="dd/mm/aaaa" style="-fx-background-color: #e8dfd2; -fx-border-radius: 5; -fx-background-radius: 5; -fx-padding: 10;" />
+                              </children>
+                           </HBox>
+                              </VBox>
                         <VBox spacing="10.0">
-                            <Text style="-fx-font-size: 14; -fx-font-weight: bold;" text="Atraso" />
-                            <TextField fx:id="atrasoField" promptText="Valor" style="-fx-background-color: #e8dfd2; -fx-border-radius: 5; -fx-background-radius: 5; -fx-padding: 10;" />
+                           <children>
+                              <Text style="-fx-font-size: 14; -fx-font-weight: bold;" text="Vencimento" wrappingWidth="131.8310546875" />
+                              <HBox prefHeight="10.0" prefWidth="360.0">
+                                 <children>
+                                    <TextField fx:id="vencimento" prefHeight="37.0" prefWidth="152.0" promptText="dd/mm/aaaa" style="-fx-background-color: #e8dfd2; -fx-border-radius: 5; -fx-background-radius: 5; -fx-padding: 10;" />
+                                 </children>
+                              </HBox>
+                           </children>
                         </VBox>
+                     </children>
+                  </HBox>
 
                         <!-- Botão Devolver -->
-                        <HBox alignment="CENTER" spacing="200.0">
-                            <Button fx:id="sair" maxWidth="90.0" minWidth="67.0" prefHeight="37.0" prefWidth="90.0" style="-fx-background-color: #e8dfd2; -fx-border-radius: 5; -fx-padding: 10;" text="Voltar" />
+                        <HBox alignment="CENTER" spacing="180.0">
+                            <Button fx:id="sair" maxWidth="90.0" minWidth="90.0" prefHeight="37.0" prefWidth="90.0" style="-fx-background-color: #e8dfd2; -fx-border-radius: 5; -fx-padding: 10;" text="Voltar" />
                      <Button fx:id="devolverButton" layoutX="303.0" layoutY="10.0" minWidth="90.0" prefHeight="37.0" prefWidth="90.0" style="-fx-background-color: #e8dfd2; -fx-border-radius: 5; -fx-padding: 10;" text="Devolver" />
                         </HBox>
                     </children>
                 </VBox>
             </children>
+         <stylesheets>
+
+         </stylesheets>
         </VBox>
     </children>
 </AnchorPane>
