--- a/src/main/resources/com/libvasf/views/edit-user-view.fxml
+++ b/src/main/resources/com/libvasf/views/edit-user-view.fxml
@@ -2,25 +2,26 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<?import javafx.scene.control.PasswordField?>
 <AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.libvasf.controllers.usuario.viewControllers.EditarUsuarioController">
     <children>
         <VBox alignment="CENTER" spacing="20.0" style="-fx-background-color: #f4f0eb;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <children>
-                <VBox maxWidth="400.0" spacing="10.0" style="-fx-background-color: #ffffff; -fx-border-radius: 10; -fx-background-radius: 10; -fx-padding: 20;">
+                <VBox maxWidth="400.0" prefWidth="400.0" spacing="10.0" style="-fx-background-color: #ffffff; -fx-border-radius: 10; -fx-background-radius: 10; -fx-padding: 20;">
                     <!-- Campos para edição -->
                     <TextField fx:id="nomeField" promptText="Nome" style="-fx-background-color: #e8dfd2; -fx-border-radius: 5;" />
                     <TextField fx:id="emailField" promptText="E-mail" style="-fx-background-color: #e8dfd2; -fx-border-radius: 5;" />
                     <PasswordField fx:id="senhaField" promptText="Senha" style="-fx-background-color: #e8dfd2; -fx-border-radius: 5;" />
-               <CheckBox  fx:id="cargo" mnemonicParsing="false" text="Admin" />
+               <CheckBox fx:id="cargo" mnemonicParsing="false" text="Admin" />
                     <!-- Botão Salvar -->
-                    <HBox alignment="CENTER" spacing="264.0">
+                    <HBox alignment="CENTER" spacing="107.0">
                         <Button fx:id="sair" style="-fx-background-color: #e8dfd2; -fx-border-radius: 5;" text="Voltar" />
+                  <Button fx:id="Excluir" style="-fx-background-color: #e8dfd2; -fx-border-radius: 5;" text="Excluir" />
                   <Button fx:id="salvarButton" layoutX="322.0" layoutY="10.0" style="-fx-background-color: #e8dfd2; -fx-border-radius: 5;" text="Salvar" />
                     </HBox>
                 </VBox>
