--- a/src/main/resources/com/libvasf/views/gerenciar-categoria-view.fxml
+++ b/src/main/resources/com/libvasf/views/gerenciar-categoria-view.fxml
@@ -1,51 +1,50 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml" prefHeight="600.0" prefWidth="800.0">
+<AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
     <children>
-        <VBox alignment="CENTER" spacing="20.0" style="-fx-background-color: #f4f0eb;" AnchorPane.topAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.bottomAnchor="0.0">
+        <VBox alignment="CENTER" spacing="20.0" style="-fx-background-color: #f4f0eb;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <children>
-                <VBox spacing="10.0" style="-fx-background-color: #ffffff; -fx-border-radius: 10; -fx-background-radius: 10; -fx-padding: 20;" maxWidth="400.0">
+                <VBox maxWidth="400.0" spacing="10.0" style="-fx-background-color: #ffffff; -fx-border-radius: 10; -fx-background-radius: 10; -fx-padding: 20;">
                     <!-- Campo para pesquisar usuário -->
                     <VBox spacing="10.0">
-                        <Text text="Pesquisar cliente" style="-fx-font-size: 14; -fx-font-weight: bold;" />
+                        <Text style="-fx-font-size: 14; -fx-font-weight: bold;" text="Pesquisar Categoria" />
                         <HBox spacing="10.0">
                             <TextField fx:id="pesquisarField" promptText="Nome" style="-fx-background-color: #e8dfd2; -fx-border-radius: 5;" />
-                            <Button text="🔍" style="-fx-background-color: #e8dfd2; -fx-border-radius: 5;" />
+                            <Button style="-fx-background-color: #e8dfd2; -fx-border-radius: 5;" text="🔍" />
                         </HBox>
                     </VBox>
                     <!-- Lista de usuários -->
                     <VBox spacing="10.0">
-                        <Text text="Usuários" style="-fx-font-size: 14; -fx-font-weight: bold;" />
-                        <ListView fx:id="usuariosListView" prefHeight="150.0" style="-fx-background-color: #e8dfd2; -fx-border-radius: 5;" />
-                        <Button text="Excluir" style="-fx-background-color: red; -fx-border-radius: 5; -fx-text-fill: white;" />
-                    </VBox>
-                    <!-- Informações do usuário -->
-                    <VBox spacing="10.0" style="-fx-background-color: #e8dfd2; -fx-border-radius: 10; -fx-padding: 15;">
-                        <TextField fx:id="nomeField" promptText="Nome" style="-fx-background-color: #ffffff; -fx-border-radius: 5;" />
-                        <TextField fx:id="emailField" promptText="E-mail" style="-fx-background-color: #ffffff; -fx-border-radius: 5;" />
-                        <TextField fx:id="telefoneField" promptText="Telefone" style="-fx-background-color: #ffffff; -fx-border-radius: 5;" />
-                        <TextField fx:id="senhaField" promptText="Senha" style="-fx-background-color: #ffffff; -fx-border-radius: 5;" />
-                        <!-- ComboBox para Cargo -->
-                        <ComboBox fx:id="cargoComboBox" promptText="Cargo" style="-fx-background-color: #ffffff; -fx-border-radius: 5;" />
+                        <Text style="-fx-font-size: 14; -fx-font-weight: bold;" text="Categorias" />
+                        <ListView fx:id="categoriasListView" prefHeight="150.0" style="-fx-background-color: #e8dfd2; -fx-border-radius: 5;" />
+                  <HBox alignment="CENTER_RIGHT" prefHeight="21.0" prefWidth="360.0">
+                     <children>
+                              <Button style="-fx-background-color: red; -fx-border-radius: 5; -fx-text-fill: white;" text="Excluir" />
+                     </children>
+                  </HBox>
                     </VBox>
                     <!-- Botão Editar -->
-                    <HBox alignment="CENTER_RIGHT">
-                        <Button fx:id="editarButton" text="Editar" style="-fx-background-color: #e8dfd2; -fx-border-radius: 5;" />
+                    <HBox alignment="CENTER_RIGHT" spacing="5.0">
+                       <!-- Informações do usuário -->
+                       <VBox alignment="CENTER" prefHeight="46.0" prefWidth="308.0" spacing="10.0" style="-fx-background-color: #e8dfd2; -fx-border-radius: 10; -fx-padding: 2;">
+                           <TextField fx:id="nomeField" prefHeight="42.0" prefWidth="291.0" promptText="Nova Categoria" style="-fx-background-color: #ffffff; -fx-border-radius: 5;" />
+                       </VBox>
+                        <Button fx:id="editarButton" prefHeight="46.0" prefWidth="52.0" style="-fx-background-color: #e8dfd2; -fx-border-radius: 5;" text="+">
+                     <font>
+                        <Font name="Ebrima Bold" size="23.0" />
+                     </font></Button>
                     </HBox>
                 </VBox>
             </children>
         </VBox>
     </children>
 </AnchorPane>
-
-
