--- a/src/main/resources/com/libvasf/views/create-user-view.fxml
+++ b/src/main/resources/com/libvasf/views/create-user-view.fxml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
@@ -13,7 +14,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="1024.0" maxWidth="1440.0" prefHeight="1024.0" prefWidth="1440.0" stylesheets="@../../../Style/global.css" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.libvasf.controllers.usuario.viewControllers.CriarUsuarioController">
+<AnchorPane maxHeight="1024.0" maxWidth="1440.0" prefHeight="1024.0" prefWidth="1440.0" stylesheets="@../../../Style/global.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.libvasf.controllers.usuario.viewControllers.CriarUsuarioController">
    <children>
       <HBox alignment="CENTER" maxHeight="1024.0" maxWidth="1440.0" prefHeight="1024.0" prefWidth="1440.0" styleClass="Background">
          <children>
@@ -21,7 +22,7 @@
                <children>
 
                   <StackPane alignment="CENTER_RIGHT" prefHeight="64.0" prefWidth="760.0">
-                     <TextField fx:id="nameField" maxHeight="64.0" maxWidth="760.0" prefHeight="64.0" prefWidth="760.0" styleClass="TextField" text="Nome">
+                     <TextField fx:id="nameField" maxHeight="64.0" maxWidth="760.0" prefHeight="64.0" prefWidth="760.0" promptText="Nome" styleClass="TextField">
                         <font>
                            <Font size="20.0" />
                         </font>
@@ -34,7 +35,7 @@
                   </StackPane>
 
                   <StackPane alignment="CENTER_RIGHT" prefHeight="64.0" prefWidth="760.0">
-                     <TextField fx:id="emailField" maxHeight="64.0" maxWidth="760.0" prefHeight="64.0" prefWidth="760.0" styleClass="TextField" text="email">
+                     <TextField fx:id="emailField" maxHeight="64.0" maxWidth="760.0" prefHeight="64.0" prefWidth="760.0" promptText="email" styleClass="TextField">
                         <font>
                            <Font size="20.0" />
                         </font>
@@ -47,7 +48,7 @@
                   </StackPane>
 
                   <StackPane alignment="CENTER_RIGHT" prefHeight="64.0" prefWidth="760.0">
-                     <PasswordField fx:id="passwordField" maxHeight="64.0" maxWidth="760.0" prefHeight="64.0" prefWidth="760.0" styleClass="TextField" text="senha">
+                     <PasswordField fx:id="passwordField" maxHeight="64.0" maxWidth="760.0" prefHeight="64.0" prefWidth="760.0" promptText="senha" styleClass="TextField">
                         <font>
                            <Font size="20.0" />
                         </font>
@@ -89,4 +90,3 @@
       </HBox>
    </children>
 </AnchorPane>
-
