--- a/src/main/resources/com/libvasf/views/main-view.fxml
+++ b/src/main/resources/com/libvasf/views/main-view.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -13,7 +14,6 @@
 
 <AnchorPane prefHeight="1024.0" prefWidth="1440.0" stylesheets="@../../../Style/global.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.libvasf.controllers.MainController">
    <HBox layoutX="0.0" layoutY="0.0" prefHeight="1024.0" prefWidth="1440.0" styleClass="Background" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-      <!-- Menu Lateral -->
       <VBox alignment="TOP_CENTER" prefHeight="1024.0" prefWidth="451.0" spacing="71.0" style="-fx-background-color: WHITE;">
          <ImageView fitHeight="177.0" fitWidth="271.0" pickOnBounds="true" preserveRatio="true">
             <VBox.margin>
@@ -76,18 +76,15 @@
             </Hyperlink>
          </HBox>
       </VBox>
-
       <VBox alignment="TOP_CENTER" prefHeight="1024.0" prefWidth="989.0" spacing="20.0">
-         <!-- Campo de Pesquisa -->
          <HBox alignment="CENTER" prefHeight="50.0" prefWidth="989.0" style="-fx-padding: 50 0 0 0;">
             <TextField fx:id="pesquisarLivros" promptText="Pesquisar livros..." prefHeight="36.0" prefWidth="800.0"
                        style="-fx-background-color: #FFFFFF; -fx-border-radius: 6; -fx-background-radius: 6; -fx-padding: 5;" />
+            <Button fx:id="botaoPesquisar" text="Pesquisar" prefHeight="36.0" prefWidth="120.0" style="-fx-background-color: #4CAF50; -fx-text-fill: white; -fx-font-size: 14px; -fx-border-radius: 6; -fx-background-radius: 6; -fx-padding: 5;" />
          </HBox>
-
          <HBox alignment="CENTER_LEFT" prefHeight="30.0" prefWidth="989.0" style="-fx-padding: 10 0 0 50;">
             <Label text="Filtros:" style="-fx-font-size: 16; -fx-text-fill: #000000;" />
          </HBox>
-
          <HBox spacing="20.0" style="-fx-padding: 0 0 0 50;">
             <TextField fx:id="autor" promptText="Autor" prefHeight="36.0" prefWidth="200.0"
                        style="-fx-background-color: #FFFFFF; -fx-border-radius: 6; -fx-background-radius: 6; -fx-padding: 5;" />
@@ -95,7 +92,6 @@
                        style="-fx-background-color: #FFFFFF; -fx-border-radius: 6; -fx-background-radius: 6; -fx-padding: 5;" />
             <TextField fx:id="ano" promptText="Ano" prefHeight="36.0" prefWidth="200.0"
                        style="-fx-background-color: #FFFFFF; -fx-border-radius: 6; -fx-background-radius: 6; -fx-padding: 5;" />
-
             <VBox spacing="10.0">
                <Label text="Categoria" style="-fx-font-size: 16; -fx-text-fill: #000000;" />
                <CheckBox text="Ficção" fx:id="ficcao" />
@@ -105,7 +101,6 @@
                <CheckBox text="Científicos" fx:id="cientificos" />
             </VBox>
          </HBox>
-
          <HBox spacing="20.0" style="-fx-padding: -40 0 0 50;">
             <Label text="Ordenar por:" style="-fx-font-size: 16; -fx-text-fill: #000000;" />
             <CheckBox text="Autor" fx:id="ordenarAutor" />
@@ -113,11 +108,9 @@
             <CheckBox text="Ano" fx:id="ordenarAno" />
             <CheckBox text="Categoria" fx:id="ordenarCategoria" />
          </HBox>
-
          <VBox alignment="TOP_CENTER" spacing="10.0" style="-fx-padding: 20 50 0 50;">
             <HBox prefHeight="150.0" prefWidth="300.0" style="-fx-background-color: #FFFFFF; -fx-border-radius: 6; -fx-background-radius: 6; -fx-padding: 15;">
-
-            <VBox alignment="CENTER_LEFT" spacing="10.0">
+               <VBox alignment="CENTER_LEFT" spacing="10.0">
                   <Label text="Nome: " style="-fx-font-size: 16;" />
                   <Label text="Autor: " style="-fx-font-size: 16;" />
                   <Label text="ISBN: " style="-fx-font-size: 16;" />
